--- a/app/views/people/show.html.erb
+++ b/app/views/people/show.html.erb
@@ -21,7 +21,7 @@
     <li><%= email.address %> <%= link_to 'Edit', edit_email_address_path(email)%> <%= link_to 'Delete', email_address_path(email), :method => "delete" %></li>
   <% end %>
 </ul>
-<%= link_to 'Add number', new_phone_number_path(person_id: @person.id) %> |
+<%= link_to 'Add number', new_phone_number_path(contact_id: @person.id, contact_type: 'Person') %> |
 <%= link_to 'Add email', new_email_address_path(person_id: @person.id) %> |
 <%= link_to 'Edit', edit_person_path(@person) %> |
 <%= link_to 'Back', people_path %>
