--- a/app/views/phone_numbers/edit.html.erb
+++ b/app/views/phone_numbers/edit.html.erb
@@ -17,7 +17,10 @@
     <%= f.text_field :number %>
   </div>
   <div class="field">
-    <%= f.hidden_field :person_id %>
+    <%= f.hidden_field :contact_id %>
+  </div>
+  <div class="field">
+    <%= f.hidden_field :contact_type %>
   </div>
   <div class="actions">
     <%= f.submit "Update phone number" %>
